# Car_Competition

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/aruco_msgs/: Marker.h  MarkerArray.h
devel/include/aruco_ros/: ArucoThresholdConfig.h
devel/include/game_start/: Play_TTS_srv.h  Play_TTS_srvRequest.h  Play_TTS_srvResponse.h
devel/include/game_start_msg/: Play_TTS_srv.h  Play_TTS_srvRequest.h  Play_TTS_srvResponse.h
devel/include/ht_msg/: Ht.h  Ht_d.h  Ht_n.h
devel/include/robot_localization/: FromLL.h  FromLLRequest.h  FromLLResponse.h  GetState.h  GetStateRequest.h  GetStateResponse.h  SetDatum.h  SetDatumRequest.h  SetDatumResponse.h  SetPose.h  SetPoseRequest.h  SetPoseResponse.h  SetUTMZone.h  SetUTMZoneRequest.h  SetUTMZoneResponse.h  ToLL.h  ToLLRequest.h  (+4 more)
src/game_start/: CMakeLists.txt
src/ht_code/: getvideo.cpp  ht_aruco.py  ht_aruco_sub.py  ht_aruco_sub1.py  ht_usb_camera.py
src/ht_cv_bridge/: CMakeLists.txt
src/ht_detect_control/: save_sub.py  xunfei_end_detect.py  xunfei_start_detect.py  xunfei_x_save_img.py
src/ht_image/: CMakeLists.txt
src/ht_laser/: CMakeLists.txt  package.xml
src/ht_msg/: CMakeLists.txt  package.xml
src/ht_yolov5_1/: CMakeLists.txt
src/huanyu_joy/: CMakeLists.txt  package.xml
src/huanyu_joy/include/huanyu_joy/: huanyu_joy.h
src/huanyu_joy/launch/: huanyu_ps2_control.launch
src/huanyu_joy/src/: huanyu_joy.cpp
src/startup_scripts/: initdev_xiao.sh
src/ucar_nav/: nav_rviz.rviz
src/xf_mic_asr_offline/: CMakeLists.txt
src/xf_mic_tts_offline/: CMakeLists.txt  package.xml
(+616 files in other folders)
